--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Fetch Example</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Fetch and Display Data</h1>
-
     <button onclick="fetchDataSync()">Fetch Data (Synchronous XMLHttpRequest)</button>
     <button onclick="fetchDataAsync()">Fetch Data (Asynchronous XMLHttpRequest)</button>
     <button onclick="fetchDataWithFetch()">Fetch Data (Fetch API & Promises)</button>
 
-    <h2>Data Table</h2>
     <table id="dataTable" border="1">
         <thead>
             <tr>
